@@ -3,7 +3,6 @@ package forge.gui.deckeditor;
 import org.apache.commons.lang3.StringUtils;
 
 import forge.Singletons;
-import forge.deck.DeckBase;
 import forge.gui.deckeditor.controllers.DeckController;
 import forge.gui.deckeditor.views.VCurrentDeck;
 import forge.gui.framework.FScreen;
@@ -23,21 +22,7 @@ public class SEditorIO {
      * @return boolean, true if success
      */
     public static boolean saveDeck() {
-        return saveDeck(false);
-    }
-
-    /**
-     * Saves the current deck, with various prompts depending on the
-     * current save environment.
-     * 
-     * @param limitedDeckMode if true, the editor is in limited deck mode,
-     * so the overwrite prompt should be adjusted accordingly.
-     * 
-     * @return boolean, true if success
-     */
-    @SuppressWarnings("unchecked")
-    public static boolean saveDeck(boolean limitedDeckMode) {
-        final DeckController<DeckBase> controller = (DeckController<DeckBase>) CDeckEditorUI.SINGLETON_INSTANCE.getCurrentEditorController().getDeckController();
+        final DeckController<?> controller = CDeckEditorUI.SINGLETON_INSTANCE.getCurrentEditorController().getDeckController();
         final String name = VCurrentDeck.SINGLETON_INSTANCE.getTxfTitle().getText();
 
         // Warn if no name
@@ -51,9 +36,8 @@ public class SEditorIO {
             boolean confirmResult = true;
             if ( !StringUtils.equals(name, controller.getModelName()) ) { // prompt only if name was changed
                 confirmResult = FOptionPane.showConfirmDialog(
-                    limitedDeckMode ? "Would you like to save changes to your deck?"
-                    : "There is already a deck named '" + name + "'. Overwrite?",
-                    limitedDeckMode ? "Save changes?" : "Overwrite Deck?");
+                    "There is already a deck named '" + name + "'. Overwrite?",
+                    "Overwrite Deck?");
             }
 
             if (confirmResult) { controller.save(); }
@@ -72,9 +56,8 @@ public class SEditorIO {
      * 
      * @return boolean, true if success
      */
-    @SuppressWarnings("unchecked")
     public static boolean confirmSaveChanges(FScreen screen) {
-        if (!((DeckController<DeckBase>) CDeckEditorUI.SINGLETON_INSTANCE.getCurrentEditorController().getDeckController()).isSaved()) {
+        if (CDeckEditorUI.SINGLETON_INSTANCE.hasChanges()) {
             Singletons.getControl().ensureScreenActive(screen); //ensure Deck Editor is active before showing dialog
             final int choice = FOptionPane.showOptionDialog("Save changes to current deck?", "Save Changes?",
                     FOptionPane.QUESTION_ICON, new String[] {"Save", "Don't Save", "Cancel"});
